<resources>
    <string name="app_name">My Chat</string>
    <string name="hello_world">Hello World!!!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add_people">Add</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_edit_message">Edit Message</string>
    <string name="action_chat_info">Chat Info</string>
    <string name="action_clear_chat">Clear Chat</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="drawer_item_1">Add Contact</string>
    <string name="drawer_item_2">Settings</string>
    <string name="drawer_item_3">QR Code</string>
    <string name="drawer_item_4">Log Out</string>
    <string name="drawer_item_5">About</string>
    <string name="drawer_item_6">Exit</string>
    <string name="action_person">Person</string>
    <string name="action_more_vart">More</string>
</resources>
